[package]
name = "rust_crawler"
version = "0.1.0"
authors = ["David Sullivan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
select = "0.4.3"
rayon = { version = "*" }
petgraph = "0.8.3"
owo-colors = "4.2.3"
