[package]
name = "rust_crawler"
version = "0.1.0"
authors = ["David Sullivan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"]}
select = "0.4.3"
rayon = { version = "*" }
petgraph = "0.8.3"
owo-colors = "4.2.3"
url = "2.5.8"
urlnorm = "0.1.6"
texting_robots = "0.2.2"
anyhow = "1.0.102"
thiserror = "2.0.18"
lazy_static = "1.5.0"
derive_more = { version = "2.1.1", features = ["display"] }
